ReuseStorageSpaceIT avoids storage specific stuff